parser/team10/ProyectoPy/Gramaticas/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    cor1
    cor2
    dosp
    exist
    min

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     instrucciones -> instrucciones NEWLINE instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> ddl
Rule 5     instruccion -> dml
Rule 6     ddl -> sentencia_create
Rule 7     ddl -> sentencia_alter
Rule 8     ddl -> sentencia_drop
Rule 9     ddl -> sentencia_truncate
Rule 10    dml -> sentencia_insert
Rule 11    dml -> sentencia_update
Rule 12    dml -> sentencia_delete
Rule 13    dml -> sentencia_select
Rule 14    dml -> sentencia_show
Rule 15    sentencia_create -> create create_cont
Rule 16    sentencia_create -> replace create_cont
Rule 17    create_cont -> database if_not pyc
Rule 18    create_cont -> table if_not par1 col_tabla par2 fin_tabla
Rule 19    create_cont -> type valor as enum par1 lista_insertar par2 pyc
Rule 20    fin_tabla -> inherits par1 identificador par2 pyc
Rule 21    fin_tabla -> pyc
Rule 22    if_not -> if not exists identificador
Rule 23    if_not -> identificador
Rule 24    if_not -> if not exists identificador owner igual valor
Rule 25    if_not -> identificador owner valor
Rule 26    if_not -> if not exists identificador mode igual valor
Rule 27    if_not -> identificador mode igual valor
Rule 28    col_tabla -> col_tabla coma identificador tipo propiedades
Rule 29    col_tabla -> col_tabla coma identificador tipo
Rule 30    col_tabla -> identificador tipo propiedades
Rule 31    col_tabla -> identificador tipo
Rule 32    col_tabla -> foreing key lista_id references identificador
Rule 33    col_tabla -> col_tabla coma primary key lista_id
Rule 34    propiedades -> null propiedades
Rule 35    propiedades -> not null propiedades
Rule 36    propiedades -> identity propiedades
Rule 37    propiedades -> primary key propiedades
Rule 38    propiedades -> null
Rule 39    propiedades -> not null
Rule 40    propiedades -> identity
Rule 41    propiedades -> primary key
Rule 42    tipo -> smallint
Rule 43    tipo -> integer
Rule 44    tipo -> bigint
Rule 45    tipo -> decimal
Rule 46    tipo -> numeric
Rule 47    tipo -> real
Rule 48    tipo -> double
Rule 49    tipo -> money
Rule 50    tipo -> character
Rule 51    tipo -> text
Rule 52    tipo -> date
Rule 53    tipo -> boolean
Rule 54    tipo -> int
Rule 55    tipo -> identificador
Rule 56    tipo -> varying par1 num par2
Rule 57    tipo -> varchar par1 num par2
Rule 58    tipo -> character par1 num par2
Rule 59    tipo -> char par1 num par2
Rule 60    sentencia_alter -> alter alter_objeto
Rule 61    alter_objeto -> table identificador alter_cont pyc
Rule 62    alter_objeto -> database identificador rename to identificador pyc
Rule 63    alter_objeto -> database identificador owner to identificador pyc
Rule 64    alter_cont -> add con_add
Rule 65    alter_cont -> drop con_drop
Rule 66    alter_cont -> rename con_rename
Rule 67    alter_cont -> alter con_alter
Rule 68    con_add -> column identificador tipo
Rule 69    con_add -> check par1 valor diferente vacio par2
Rule 70    con_add -> foreing key par1 identificador par2 references identificador
Rule 71    con_drop -> column identificador
Rule 72    con_drop -> constraint identificador
Rule 73    con_rename -> column identificador to identificador
Rule 74    con_alter -> column identificador set not null
Rule 75    sentencia_drop -> drop objeto if_exist pyc
Rule 76    if_exist -> if exists identificador
Rule 77    if_exist -> identificador
Rule 78    objeto -> table
Rule 79    objeto -> database
Rule 80    sentencia_truncate -> truncate table identificador pyc
Rule 81    sentencia_insert -> insert into identificador insert_cont pyc
Rule 82    insert_cont -> values par1 lista_insertar par2
Rule 83    insert_cont -> par1 lista_campos par2 values par1 lista_insertar par2
Rule 84    lista_campos -> identificador
Rule 85    valor -> num
Rule 86    valor -> cadena
Rule 87    valor -> pdecimal
Rule 88    valor -> identificador
Rule 89    valor -> cadenacaracter
Rule 90    valor -> substring par1 valor coma valor coma valor par2
Rule 91    lista_insertar -> lista_insertar coma operacion_aritmetica
Rule 92    lista_insertar -> operacion_aritmetica
Rule 93    sentencia_update -> update identificador set identificador igual operacion_aritmetica condicion
Rule 94    sentencia_delete -> delete from delete_cont condicion
Rule 95    delete_cont -> only identificador
Rule 96    delete_cont -> only identificador por
Rule 97    delete_cont -> identificador por
Rule 98    delete_cont -> identificador
Rule 99    sentencia_select -> select opciones_fecha
Rule 100   sentencia_select -> select select_cont from lista_from condicion_cont
Rule 101   order_by -> order by identificador opcion_order order_by
Rule 102   order_by -> condicion_cont
Rule 103   order_by -> limit operacion_aritmetica order_by
Rule 104   order_by -> offset operacion_aritmetica order_by
Rule 105   opcion_order -> asc
Rule 106   opcion_order -> desc
Rule 107   condicion_cont -> where operacion_logica fin_select
Rule 108   condicion_cont -> where operacion_relacional fin_select
Rule 109   condicion_cont -> where operacion_logica group by identificador fin_select
Rule 110   condicion_cont -> group by lista_id fin_select
Rule 111   condicion_cont -> group by lista_id having operacion_logica fin_select
Rule 112   condicion_cont -> where exists par1 sentencia_select par2 fin_select
Rule 113   condicion_cont -> where operacion_aritmetica in par1 sentencia_select par2 fin_select
Rule 114   condicion_cont -> where operacion_aritmetica not in par1 sentencia_select par2 fin_select
Rule 115   condicion_cont -> fin_select
Rule 116   fin_select -> order_by
Rule 117   fin_select -> pyc
Rule 118   fin_select -> union sentencia_select
Rule 119   fin_select -> intersect sentencia_select
Rule 120   fin_select -> except sentencia_select
Rule 121   lista_from -> lista_from coma identificador as identificador
Rule 122   lista_from -> lista_from coma identificador
Rule 123   lista_from -> identificador as identificador
Rule 124   lista_from -> identificador
Rule 125   lista_from -> hacer_join
Rule 126   lista_from -> par1 sentencia_select par2 as identificador
Rule 127   lista_from -> par1 sentencia_select par2
Rule 128   tipo_join -> inner join
Rule 129   tipo_join -> left join
Rule 130   tipo_join -> right join
Rule 131   tipo_join -> full join
Rule 132   tipo_join -> outer join
Rule 133   tipo_join -> join
Rule 134   hacer_join -> identificador tipo_join identificador on operacion_logica
Rule 135   hacer_join -> identificador tipo_join identificador
Rule 136   select_cont -> por
Rule 137   select_cont -> distinct lista_id
Rule 138   select_cont -> lista_id
Rule 139   select_cont -> sen_case
Rule 140   sen_case -> case case_when
Rule 141   case_when -> when operacion_logica then operacion_aritmetica case_when
Rule 142   case_when -> end valor
Rule 143   lista_id -> lista_id coma operacion_aritmetica
Rule 144   lista_id -> lista_id coma identificador punto identificador
Rule 145   lista_id -> operacion_aritmetica
Rule 146   lista_id -> identificador punto identificador
Rule 147   lista_id -> substring par1 valor coma valor coma valor par2
Rule 148   opciones_fecha -> extract par1 tipo_date from timestamp valor par2 pyc
Rule 149   opciones_fecha -> now par1 par2 pyc
Rule 150   opciones_fecha -> date_part par1 valor coma interval valor par2 pyc
Rule 151   opciones_fecha -> current_date pyc
Rule 152   opciones_fecha -> current_time pyc
Rule 153   opciones_fecha -> timestamp valor pyc
Rule 154   tipo_date -> year
Rule 155   tipo_date -> month
Rule 156   tipo_date -> day
Rule 157   tipo_date -> hour
Rule 158   tipo_date -> minute
Rule 159   tipo_date -> second
Rule 160   condicion -> pyc
Rule 161   condicion -> where operacion_logica pyc
Rule 162   condicion -> where identificador igual operacion_aritmetica pyc
Rule 163   condicion -> where exists par1 sentencia_select par2 pyc
Rule 164   condicion -> where operacion_aritmetica in par1 sentencia_select par2 pyc
Rule 165   condicion -> where operacion_aritmetica not in par1 sentencia_select par2 pyc
Rule 166   operacion_aritmetica -> operacion_aritmetica mas operacion_aritmetica
Rule 167   operacion_aritmetica -> operacion_aritmetica menos operacion_aritmetica
Rule 168   operacion_aritmetica -> operacion_aritmetica por operacion_aritmetica
Rule 169   operacion_aritmetica -> operacion_aritmetica div operacion_aritmetica
Rule 170   operacion_aritmetica -> par1 operacion_aritmetica par2
Rule 171   operacion_aritmetica -> valor
Rule 172   operacion_aritmetica -> sum par1 operacion_aritmetica par2
Rule 173   operacion_aritmetica -> avg par1 operacion_aritmetica par2
Rule 174   operacion_aritmetica -> max par1 operacion_aritmetica par2
Rule 175   operacion_aritmetica -> pi
Rule 176   operacion_aritmetica -> power par1 operacion_aritmetica par2
Rule 177   operacion_aritmetica -> sqrt par1 operacion_aritmetica par2
Rule 178   operacion_aritmetica -> valor between valor
Rule 179   operacion_aritmetica -> valor is distinct from valor
Rule 180   operacion_aritmetica -> valor is not distinct from valor
Rule 181   operacion_aritmetica -> valor is null
Rule 182   operacion_aritmetica -> valor is not null
Rule 183   operacion_aritmetica -> valor is true
Rule 184   operacion_aritmetica -> valor is not true
Rule 185   operacion_aritmetica -> valor is false
Rule 186   operacion_aritmetica -> valor is not false
Rule 187   operacion_relacional -> operacion_relacional mayor operacion_relacional
Rule 188   operacion_relacional -> operacion_relacional menor operacion_relacional
Rule 189   operacion_relacional -> operacion_relacional mayorigual operacion_relacional
Rule 190   operacion_relacional -> operacion_relacional menorigual operacion_relacional
Rule 191   operacion_relacional -> operacion_relacional diferente operacion_relacional
Rule 192   operacion_relacional -> operacion_relacional igual operacion_relacional
Rule 193   operacion_relacional -> operacion_aritmetica
Rule 194   operacion_logica -> operacion_logica and operacion_logica
Rule 195   operacion_logica -> operacion_logica or operacion_logica
Rule 196   operacion_logica -> operacion_logica not operacion_logica
Rule 197   operacion_logica -> operacion_relacional
Rule 198   sentencia_show -> show databases show_cont
Rule 199   show_cont -> pyc
Rule 200   show_cont -> ins_like pyc
Rule 201   ins_like -> like porcentaje identificador porcentaje
Rule 202   empty -> <empty>

Terminals, with rules where they appear

NEWLINE              : 2
add                  : 64
alter                : 60 67
and                  : 194
as                   : 19 121 123 126
asc                  : 105
avg                  : 173
between              : 178
bigint               : 44
boolean              : 53
by                   : 101 109 110 111
cadena               : 86
cadenacaracter       : 89
case                 : 140
char                 : 59
character            : 50 58
check                : 69
column               : 68 71 73 74
coma                 : 28 29 33 90 90 91 121 122 143 144 147 147 150
constraint           : 72
cor1                 : 
cor2                 : 
create               : 15
current_date         : 151
current_time         : 152
database             : 17 62 63 79
databases            : 198
date                 : 52
date_part            : 150
day                  : 156
decimal              : 45
delete               : 94
desc                 : 106
diferente            : 69 191
distinct             : 137 179 180
div                  : 169
dosp                 : 
double               : 48
drop                 : 65 75
end                  : 142
enum                 : 19
error                : 
except               : 120
exist                : 
exists               : 22 24 26 76 112 163
extract              : 148
false                : 185 186
foreing              : 32 70
from                 : 94 100 148 179 180
full                 : 131
group                : 109 110 111
having               : 111
hour                 : 157
identificador        : 20 22 23 24 25 26 27 28 29 30 31 32 55 61 62 62 63 63 68 70 70 71 72 73 73 74 76 77 80 81 84 88 93 93 95 96 97 98 101 109 121 121 122 123 123 124 126 134 134 135 135 144 144 146 146 162 201
identity             : 36 40
if                   : 22 24 26 76
igual                : 24 26 27 93 162 192
in                   : 113 114 164 165
inherits             : 20
inner                : 128
insert               : 81
int                  : 54
integer              : 43
intersect            : 119
interval             : 150
into                 : 81
is                   : 179 180 181 182 183 184 185 186
join                 : 128 129 130 131 132 133
key                  : 32 33 37 41 70
left                 : 129
like                 : 201
limit                : 103
mas                  : 166
max                  : 174
mayor                : 187
mayorigual           : 189
menor                : 188
menorigual           : 190
menos                : 167
min                  : 
minute               : 158
mode                 : 26 27
money                : 49
month                : 155
not                  : 22 24 26 35 39 74 114 165 180 182 184 186 196
now                  : 149
null                 : 34 35 38 39 74 181 182
num                  : 56 57 58 59 85
numeric              : 46
offset               : 104
on                   : 134
only                 : 95 96
or                   : 195
order                : 101
outer                : 132
owner                : 24 25 63
par1                 : 18 19 20 56 57 58 59 69 70 82 83 83 90 112 113 114 126 127 147 148 149 150 163 164 165 170 172 173 174 176 177
par2                 : 18 19 20 56 57 58 59 69 70 82 83 83 90 112 113 114 126 127 147 148 149 150 163 164 165 170 172 173 174 176 177
pdecimal             : 87
pi                   : 175
por                  : 96 97 136 168
porcentaje           : 201 201
power                : 176
primary              : 33 37 41
punto                : 144 146
pyc                  : 17 19 20 21 61 62 63 75 80 81 117 148 149 150 151 152 153 160 161 162 163 164 165 199 200
real                 : 47
references           : 32 70
rename               : 62 66
replace              : 16
right                : 130
second               : 159
select               : 99 100
set                  : 74 93
show                 : 198
smallint             : 42
sqrt                 : 177
substring            : 90 147
sum                  : 172
table                : 18 61 78 80
text                 : 51
then                 : 141
timestamp            : 148 153
to                   : 62 63 73
true                 : 183 184
truncate             : 80
type                 : 19
union                : 118
update               : 93
vacio                : 69
values               : 82 83
varchar              : 57
varying              : 56
when                 : 141
where                : 107 108 109 112 113 114 161 162 163 164 165
year                 : 154

Nonterminals, with rules where they appear

alter_cont           : 61
alter_objeto         : 60
case_when            : 140 141
col_tabla            : 18 28 29 33
con_add              : 64
con_alter            : 67
con_drop             : 65
con_rename           : 66
condicion            : 93 94
condicion_cont       : 100 102
create_cont          : 15 16
ddl                  : 4
delete_cont          : 94
dml                  : 5
empty                : 
fin_select           : 107 108 109 110 111 112 113 114 115
fin_tabla            : 18
hacer_join           : 125
if_exist             : 75
if_not               : 17 18
inicio               : 0
ins_like             : 200
insert_cont          : 81
instruccion          : 2 3
instrucciones        : 1 2
lista_campos         : 83
lista_from           : 100 121 122
lista_id             : 32 33 110 111 137 138 143 144
lista_insertar       : 19 82 83 91
objeto               : 75
opcion_order         : 101
opciones_fecha       : 99
operacion_aritmetica : 91 92 93 103 104 113 114 141 143 145 162 164 165 166 166 167 167 168 168 169 169 170 172 173 174 176 177 193
operacion_logica     : 107 109 111 134 141 161 194 194 195 195 196 196
operacion_relacional : 108 187 187 188 188 189 189 190 190 191 191 192 192 197
order_by             : 101 103 104 116
propiedades          : 28 30 34 35 36 37
select_cont          : 100
sen_case             : 139
sentencia_alter      : 7
sentencia_create     : 6
sentencia_delete     : 12
sentencia_drop       : 8
sentencia_insert     : 10
sentencia_select     : 13 112 113 114 118 119 120 126 127 163 164 165
sentencia_show       : 14
sentencia_truncate   : 9
sentencia_update     : 11
show_cont            : 198
tipo                 : 28 29 30 31 68
tipo_date            : 148
tipo_join            : 134 135
valor                : 19 24 25 26 27 69 90 90 90 142 147 147 147 148 150 150 153 171 178 178 179 179 180 180 181 182 183 184 185 186

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (2) instrucciones -> . instrucciones NEWLINE instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . ddl
    (5) instruccion -> . dml
    (6) ddl -> . sentencia_create
    (7) ddl -> . sentencia_alter
    (8) ddl -> . sentencia_drop
    (9) ddl -> . sentencia_truncate
    (10) dml -> . sentencia_insert
    (11) dml -> . sentencia_update
    (12) dml -> . sentencia_delete
    (13) dml -> . sentencia_select
    (14) dml -> . sentencia_show
    (15) sentencia_create -> . create create_cont
    (16) sentencia_create -> . replace create_cont
    (60) sentencia_alter -> . alter alter_objeto
    (75) sentencia_drop -> . drop objeto if_exist pyc
    (80) sentencia_truncate -> . truncate table identificador pyc
    (81) sentencia_insert -> . insert into identificador insert_cont pyc
    (93) sentencia_update -> . update identificador set identificador igual operacion_aritmetica condicion
    (94) sentencia_delete -> . delete from delete_cont condicion
    (99) sentencia_select -> . select opciones_fecha
    (100) sentencia_select -> . select select_cont from lista_from condicion_cont
    (198) sentencia_show -> . show databases show_cont

    create          shift and go to state 15
    replace         shift and go to state 16
    alter           shift and go to state 17
    drop            shift and go to state 18
    truncate        shift and go to state 19
    insert          shift and go to state 20
    update          shift and go to state 21
    delete          shift and go to state 22
    select          shift and go to state 23
    show            shift and go to state 24

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    ddl                            shift and go to state 4
    dml                            shift and go to state 5
    sentencia_create               shift and go to state 6
    sentencia_alter                shift and go to state 7
    sentencia_drop                 shift and go to state 8
    sentencia_truncate             shift and go to state 9
    sentencia_insert               shift and go to state 10
    sentencia_update               shift and go to state 11
    sentencia_delete               shift and go to state 12
    sentencia_select               shift and go to state 13
    sentencia_show                 shift and go to state 14

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (2) instrucciones -> instrucciones . NEWLINE instruccion

    $end            reduce using rule 1 (inicio -> instrucciones .)
    NEWLINE         shift and go to state 25


state 3

    (3) instrucciones -> instruccion .

    NEWLINE         reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> ddl .

    NEWLINE         reduce using rule 4 (instruccion -> ddl .)
    $end            reduce using rule 4 (instruccion -> ddl .)


state 5

    (5) instruccion -> dml .

    NEWLINE         reduce using rule 5 (instruccion -> dml .)
    $end            reduce using rule 5 (instruccion -> dml .)


state 6

    (6) ddl -> sentencia_create .

    NEWLINE         reduce using rule 6 (ddl -> sentencia_create .)
    $end            reduce using rule 6 (ddl -> sentencia_create .)


state 7

    (7) ddl -> sentencia_alter .

    NEWLINE         reduce using rule 7 (ddl -> sentencia_alter .)
    $end            reduce using rule 7 (ddl -> sentencia_alter .)


state 8

    (8) ddl -> sentencia_drop .

    NEWLINE         reduce using rule 8 (ddl -> sentencia_drop .)
    $end            reduce using rule 8 (ddl -> sentencia_drop .)


state 9

    (9) ddl -> sentencia_truncate .

    NEWLINE         reduce using rule 9 (ddl -> sentencia_truncate .)
    $end            reduce using rule 9 (ddl -> sentencia_truncate .)


state 10

    (10) dml -> sentencia_insert .

    NEWLINE         reduce using rule 10 (dml -> sentencia_insert .)
    $end            reduce using rule 10 (dml -> sentencia_insert .)


state 11

    (11) dml -> sentencia_update .

    NEWLINE         reduce using rule 11 (dml -> sentencia_update .)
    $end            reduce using rule 11 (dml -> sentencia_update .)


state 12

    (12) dml -> sentencia_delete .

    NEWLINE         reduce using rule 12 (dml -> sentencia_delete .)
    $end            reduce using rule 12 (dml -> sentencia_delete .)


state 13

    (13) dml -> sentencia_select .

    NEWLINE         reduce using rule 13 (dml -> sentencia_select .)
    $end            reduce using rule 13 (dml -> sentencia_select .)


state 14

    (14) dml -> sentencia_show .

    NEWLINE         reduce using rule 14 (dml -> sentencia_show .)
    $end            reduce using rule 14 (dml -> sentencia_show .)


state 15

    (15) sentencia_create -> create . create_cont
    (17) create_cont -> . database if_not pyc
    (18) create_cont -> . table if_not par1 col_tabla par2 fin_tabla
    (19) create_cont -> . type valor as enum par1 lista_insertar par2 pyc

    database        shift and go to state 27
    table           shift and go to state 28
    type            shift and go to state 29

    create_cont                    shift and go to state 26

state 16

    (16) sentencia_create -> replace . create_cont
    (17) create_cont -> . database if_not pyc
    (18) create_cont -> . table if_not par1 col_tabla par2 fin_tabla
    (19) create_cont -> . type valor as enum par1 lista_insertar par2 pyc

    database        shift and go to state 27
    table           shift and go to state 28
    type            shift and go to state 29

    create_cont                    shift and go to state 30

state 17

    (60) sentencia_alter -> alter . alter_objeto
    (61) alter_objeto -> . table identificador alter_cont pyc
    (62) alter_objeto -> . database identificador rename to identificador pyc
    (63) alter_objeto -> . database identificador owner to identificador pyc

    table           shift and go to state 32
    database        shift and go to state 33

    alter_objeto                   shift and go to state 31

state 18

    (75) sentencia_drop -> drop . objeto if_exist pyc
    (78) objeto -> . table
    (79) objeto -> . database

    table           shift and go to state 35
    database        shift and go to state 36

    objeto                         shift and go to state 34

state 19

    (80) sentencia_truncate -> truncate . table identificador pyc

    table           shift and go to state 37


state 20

    (81) sentencia_insert -> insert . into identificador insert_cont pyc

    into            shift and go to state 38


state 21

    (93) sentencia_update -> update . identificador set identificador igual operacion_aritmetica condicion

    identificador   shift and go to state 39


state 22

    (94) sentencia_delete -> delete . from delete_cont condicion

    from            shift and go to state 40


state 23

    (99) sentencia_select -> select . opciones_fecha
    (100) sentencia_select -> select . select_cont from lista_from condicion_cont
    (148) opciones_fecha -> . extract par1 tipo_date from timestamp valor par2 pyc
    (149) opciones_fecha -> . now par1 par2 pyc
    (150) opciones_fecha -> . date_part par1 valor coma interval valor par2 pyc
    (151) opciones_fecha -> . current_date pyc
    (152) opciones_fecha -> . current_time pyc
    (153) opciones_fecha -> . timestamp valor pyc
    (136) select_cont -> . por
    (137) select_cont -> . distinct lista_id
    (138) select_cont -> . lista_id
    (139) select_cont -> . sen_case
    (143) lista_id -> . lista_id coma operacion_aritmetica
    (144) lista_id -> . lista_id coma identificador punto identificador
    (145) lista_id -> . operacion_aritmetica
    (146) lista_id -> . identificador punto identificador
    (147) lista_id -> . substring par1 valor coma valor coma valor par2
    (140) sen_case -> . case case_when
    (166) operacion_aritmetica -> . operacion_aritmetica mas operacion_aritmetica
    (167) operacion_aritmetica -> . operacion_aritmetica menos operacion_aritmetica
    (168) operacion_aritmetica -> . operacion_aritmetica por operacion_aritmetica
    (169) operacion_aritmetica -> . operacion_aritmetica div operacion_aritmetica
    (170) operacion_aritmetica -> . par1 operacion_aritmetica par2
    (171) operacion_aritmetica -> . valor
    (172) operacion_aritmetica -> . sum par1 operacion_aritmetica par2
    (173) operacion_aritmetica -> . avg par1 operacion_aritmetica par2
    (174) operacion_aritmetica -> . max par1 operacion_aritmetica par2
    (175) operacion_aritmetica -> . pi
    (176) operacion_aritmetica -> . power par1 operacion_aritmetica par2
    (177) operacion_aritmetica -> . sqrt par1 operacion_aritmetica par2
    (178) operacion_aritmetica -> . valor between valor
    (179) operacion_aritmetica -> . valor is distinct from valor
    (180) operacion_aritmetica -> . valor is not distinct from valor
    (181) operacion_aritmetica -> . valor is null
    (182) operacion_aritmetica -> . valor is not null
    (183) operacion_aritmetica -> . valor is true
    (184) operacion_aritmetica -> . valor is not true
    (185) operacion_aritmetica -> . valor is false
    (186) operacion_aritmetica -> . valor is not false
    (85) valor -> . num
    (86) valor -> . cadena
    (87) valor -> . pdecimal
    (88) valor -> . identificador
    (89) valor -> . cadenacaracter
    (90) valor -> . substring par1 valor coma valor coma valor par2
